--- a/cas.html
+++ b/cas.html
@@ -1,36 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy</title>
-    <style>
-        body { font-family: Arial, sans-serif; line-height: 1.6; }
-        .container { width: 80%; margin: auto; overflow: hidden; }
-        h1, .content { margin-bottom: 20px; }
-    </style>
+  <meta charset="UTF-8">
+  <title>Bubbler Privacy Policy</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Privacy Policy</h1>
-        <div class="content">
-            <h2>1. Introduction</h2>
-            <p>This privacy policy ("Policy") describes how we collect, use, and share personal information of consumer users of this website.</p>
-            
-            <h2>2. Information We Collect</h2>
-            <p>Details on the types of personal information we collect, such as name, email address, etc.</p>
-            
-            <!-- Add more sections as needed -->
+  <h1>Bubbler Privacy Policy</h1>
+  <p>Last updated: Jan 24, 2024</p>
 
-            <h2>3. Use of Information</h2>
-            <p>Explanation of how the collected information is used, e.g., to provide services, communicate with users, etc.</p>
+  <p>This Privacy Policy applies to Bubbler services (the “Platform”), which include Bubbler apps, websites, software and related services accessed via any platform or device that link to this Privacy Policy. The Platform is provided and controlled by Bubbler Inc. (“Bubbler”, “we” or “us”). We are committed to protecting and respecting your privacy. This Privacy Policy explains how we collect, use, share, and otherwise process the personal information of users and other individuals age 13 and over in connection with our Platform. For information about how we collect, use, share, and otherwise process the personal information of users under age 13 (“Children”), please refer to our Children’s Privacy Policy.</p>
 
-            <h2>4. Sharing of Information</h2>
-            <p>Describe the circumstances under which information might be shared with third parties.</p>
-
-            <!-- Additional sections and clauses as per your service's requirements -->
-
-        </div>
-    </div>
-</body>
+  <h2>What Information We Collect</h2>
+  <p>We may collect information from and about you, including information that you provide, information from other sources, and automatically collected information.</p>
+  </body>
 </html>
