--- a/cas.html
+++ b/cas.html
@@ -1,16 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Bubbler Privacy Policy</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy</title>
 </head>
 <body>
-  <h1>Bubbler Privacy Policy</h1>
-  <p>Last updated: Jan 24, 2024</p>
 
-  <p>This Privacy Policy applies to Bubbler services (the “Platform”), which include Bubbler apps, websites, software and related services accessed via any platform or device that link to this Privacy Policy. The Platform is provided and controlled by Bubbler Inc. (“Bubbler”, “we” or “us”). We are committed to protecting and respecting your privacy. This Privacy Policy explains how we collect, use, share, and otherwise process the personal information of users and other individuals age 13 and over in connection with our Platform. For information about how we collect, use, share, and otherwise process the personal information of users under age 13 (“Children”), please refer to our Children’s Privacy Policy.</p>
+<div id="privacy-policy">
+    <h2>Last updated: Jan 24, 2024</h2>
 
-  <h2>What Information We Collect</h2>
-  <p>We may collect information from and about you, including information that you provide, information from other sources, and automatically collected information.</p>
-  </body>
+    <p>
+        This Privacy Policy applies to Bubbler services (the “<u>Platform</u>”), which include Bubbler apps, websites,
+        software and related services accessed via any platform or device that link to this Privacy Policy. The
+        Platform is provided and controlled by Bubbler Inc. (“Bubbler”, “we” or “us”). We are committed to protecting
+        and respecting your privacy. This Privacy Policy explains how we collect, use, share, and otherwise process the
+        personal information of users and other individuals age 13 and over in connection with our Platform. For
+        information about how we collect, use, share, and otherwise process the personal information of users under age
+        13 (“Children”), please refer to our Children’s Privacy Policy.
+    </p>
+
+    <p>
+        Capitalized terms that are not defined in this Privacy Policy have the meaning given to them in the Terms of
+        Service.
+    </p>
+
+    <h3>What Information We Collect</h3>
+
+    <p>
+        We may collect information from and about you, including information that you provide, information from other
+        sources, and automatically collected information.
+    </p>
+
+    <h4>Information You Provide</h4>
+
+    <p>
+        When you create an account, upload content, contact us directly, or otherwise use the Platform, you may provide
+        some or all of the following information:
+    </p>
+
+    <ul>
+        <li>Account and profile information, such as name, age, username, password, language, email, phone number,
+            social media account information, and profile image.
+        </li>
+        <li>User-generated content, including comments, photographs, livestreams, audio recordings, videos, text,
+            hashtags, and virtual item videos that you choose to create with or upload to the Platform (“User
+            Content”) and the associated metadata, such as when, where, and by whom the content was created.
+        </li>
+        <li>Messages, which include information you provide when you compose, send, or receive messages through the
+            Platform’s messaging functionalities.
+        </li>
+        <li>Information, including text, images, and videos, found in your device’s clipboard, with your permission.
+        </li>
+        <li>Purchase information, including payment card numbers or other third-party payment information (such as
+            PayPal) where required for the purpose of payment, and billing and shipping address.
+        </li>
+        <li>Your phone and social network contacts, with your permission.
+        </li>
+    </ul>
+
+    <h4>Information From Other Sources</h4>
+
+    <p>
+        We may receive the information described in this Privacy Policy from other sources, such as:
+    </p>
+
+    <ul>
+        <li>If you choose to sign-up or log-in to the Platform using a third-party service or link your Bubbler account
+            to a third-party service, we may collect information from the service.
+        </li>
+        <li>Advertisers, measurement and other partners share information with us about your activities outside of the
+            Platform.
+        </li>
+    </ul>
+
+    <h4>Automatically Collected Information</h4>
+
+    <p>
+        We automatically collect certain information from you when you use the Platform, including internet or other
+        network activity information.
+    </p>
+
+    <h3>How We Use Your Information</h3>
+
+    <p>
+        As explained below, we use your information to improve, support and administer the Platform, to allow you to
+        use its functionalities, and to fulfill and enforce our Terms of Service. We may also use your information to,
+        among other things, show you suggestions, promote the Platform, and customize your ad experience.
+    </p>
+
+    <h3>How We Share Your Information</h3>
+
+    <p>
+        We share the categories of personal information listed above with service providers and business partners to
+        help us perform business operations and for business purposes.
+    </p>
+
+    <h4>Within Our Corporate Group</h4>
+
+    <p>
+        The Platform is supported by certain entities within our corporate group, which are given limited remote access
+        to Information We Collect as necessary to enable them to provide certain important functions.
+    </p>
+
+    <h4>In Connection with a Sale, Merger, or Other Business Transfer</h4>
+
+    <p>
+        We may share all of the Information We Collect in connection with a substantial corporate transaction.
+    </p>
+
+    <h4>For Legal Reasons</h4>
+
+    <p>
+        We may disclose any of the Information We Collect to respond to subpoenas, court orders, legal process, law
+        enforcement requests, legal claims, or government inquiries, and to protect and defend the rights, interests,
+        safety, and security of the Platform, our affiliates, users, or the public.
+    </p>
+
+    <h4>With Your Consent</h4>
+
+    <p>
+        We may share your information for other purposes pursuant to your consent or at your direction.
+    </p>
+
+    <h3>Your Rights</h3>
+
+    <p>
+        You may submit a request to know, access, correct or delete the information we have collected about you. More
+        information about requests that we received can be found <a href="https://www.bubbler.ai/legal/report/privacy">here</a>.
+    </p>
+
+    <h3>Your Choices</h3>
+
+    <p>
+        You have several choices regarding the collection and processing of your information, including control over
+        the use of Cookies and targeted advertising.
+    </p>
+
+    <h3>Data Security and Retention</h3>
+
+    <p>
+        We use reasonable measures to help protect information from loss, theft, misuse, unauthorized access,
+        disclosure, alteration, or destruction.
+    </p>
+
+    <h3>Children and Teens</h3>
+
+    <p>
+        The privacy of Children is important to us. Please refer to our Children’s Privacy Policy.
+    </p>
+
+    <h3>Other Rights</h3>
+
+    <p>
+        Certain jurisdictions provide additional rights for residents, such as California's "Shine the Light" law and
+        content removal for users under 18.
+    </p>
+
+    <h3>Privacy Policy Updates</h3>
+
+    <p>
+        We may update this Privacy Policy from time to time. When we update the Privacy Policy, we will notify you by
+        updating the “Last Updated” date at the top of the new Privacy Policy and provide any other notice required by
+        applicable law.
+    </p>
+
+    <p>
+        Bubbler may transmit your data to its servers or data centers outside of the United States for storage and/or
+        processing.
+    </p>
+</div>
+
+</body>
 </html>
